--- a/app/components/publications/publication/publication-activities/publication-registered-panel.hbs
+++ b/app/components/publications/publication/publication-activities/publication-registered-panel.hbs
@@ -14,22 +14,25 @@
         </Group.Item>
       </Toolbar.Group>
       <Toolbar.Group @position="right">
-        <Auk::DropdownMenu
-          @skin="borderless"
+        <AuDropdown
           @icon="three-dots"
+          @title={{t "more"}}
+          @hideText={{true}}
           @disabled={{and this.loadData.isIdle this.isEditDisabled}}
-          as |Menu|
+          @alignment="right"
         >
           {{!avoid render issues}}
           {{#if this.loadData.isIdle}}
-            <Menu.Item
+            <AuButton
+              @skin="link"
               @disabled={{this.isEditDisabled}}
               {{on "click" this.openPublicationEditModal}}
+              role="menuitem"
             >
               {{t "edit-2"}}
-            </Menu.Item>
+            </AuButton>
           {{/if}}
-        </Auk::DropdownMenu>
+        </AuDropdown>
       </Toolbar.Group>
     </Auk::Toolbar>
   </Auk::Panel::Header>
