--- a/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
@@ -141,6 +141,10 @@
             <div class="auk-skeleton auk-skeleton--rectangle" role="alert" aria-busy="true"></div>
           {{else if this.approved}}
             {{moment-format this.latestMeeting.plannedStart}}
+          {{else if this.latestDecisionResultCode.isPostponed}}
+            {{t "postponed"}}
+          {{else if this.latestDecisionResultCode.isRetracted}}
+            {{t "retracted"}}
           {{else}}
             {{t "not-yet-decided"}}
           {{/if}}
