KAS-3594 Add missing submit type to search button

--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -15,6 +15,7 @@
           data-test-route-settings-users-search-button
           @skin="primary"
           @icon="search"
+          type="submit"
           class="auk-o-flex__item--fix"
         >
           {{t "search"}}
