--- a/app/templates/cases/case/subcases/subcase.hbs
+++ b/app/templates/cases/case/subcases/subcase.hbs
@@ -9,6 +9,7 @@
   <Subcases::SubcaseHeader
     @subcase={{this.model}}
     @onMoveSubcase={{this.refreshSubcases}}
+    @onProposingSubcase={{this.refreshSubcases}}
   />
 </div>
 {{outlet}}
