Re-add spacing class on main header

--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -57,7 +57,7 @@
         </Auk::Toolbar::Item>
       {{/if}}
     </Auk::Toolbar::Group>
-    <Auk::Toolbar::Group @position="right">
+    <Auk::Toolbar::Group @position="right" class="auk-u-mr-3">
       {{#if this.environmentName}}
         <Auk::Toolbar::Item class="auk-u-mr-3">
           <div class="vlc-environment-pill {{this.environmentClass}}">
