feat: add read-only overview of user organizations

--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -26,6 +26,11 @@
                 {{t "manage-users"}}
               </Auk::Tab>
             {{/if}}
+            <Auk::Tab
+              @route="settings.organizations"
+            >
+              {{t "manage-organizations"}}
+            </Auk::Tab>
           </Auk::Tabs>
         </Auk::Toolbar::Item>
       </Auk::Toolbar::Group>
