--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -74,10 +74,33 @@
                 {{#if (lte user.memberships.length 1)}}
                   {{!-- Show more options --}}
                 {{/if}}
-                <Auk::Button
-                  @skin="borderless"
-                  @layout="icon-only"
+                <AuDropdown
+                  @skin="naked"
+                  @hideText={{true}}
+                  @alignment="right"
+                  @icon="three-dots"
+                >
+                  <AuButton
+                    @skin="naked"
+                    @alert={{true}}
+                    role="menuitem"
+                    {{on "click" (queue (toggle "showBlockMembership" this) (set this "userBeingBlocked" user))}}
+                  >
+                    {{t "block-membership"}}
+                  </AuButton>
+                  <AuButton
+                    @skin="naked"
+                    @alert={{true}}
+                    role="menuitem"
+                    {{on "click" (queue (toggle "showBlockUser" this) (set this "userBeingBlocked" user))}}
+                  >
+                    {{t "block-user"}}
+                  </AuButton>
+                </AuDropdown>
+                <AuLink
+                  @skin="button-naked"
                   @icon="chevron-right"
+                  @hideText={{true}}
                   @route="settings.users.user"
                   @model={{user.id}}
                   data-test-button-user-detail
@@ -90,3 +113,87 @@
     </div>
   </div>
 </div>
+
+<AuModal
+  @modalOpen={{this.showBlockMembership}}
+  @closeModal={{toggle "showBlockMembership" this}}
+>
+  <:title>
+    {{t "block-membership"}}
+  </:title>
+  <:body>
+    <div class="au-o-flow au-o-flow--small">
+      <p>{{t "block-membership-explanation"}}</p>
+      <AuFieldset as |f|>
+        <f.legend>{{t "block-membership-which-one"}}</f.legend>
+        <f.content>
+          {{#each this.userBeingBlocked.memberships as |membership|}}
+            {{#let (concat membership.organization.name " - " membership.role.label) as |membershipLabel|}}
+              <AuControlCheckbox
+                @label={{membershipLabel}}
+                @identifier={{membershipLabel}}
+              />
+            {{/let}}
+          {{/each}}
+        </f.content>
+      </AuFieldset>
+    </div>
+  </:body>
+  <:footer>
+    <AuToolbar
+      as |Group|
+    >
+      <Group>
+        <AuButton
+          @skin="naked"
+          {{on "click" (toggle "showBlockMembership" this)}}
+        >
+          {{t "cancel"}}
+        </AuButton>
+      </Group>
+      <Group>
+        <AuButton
+          @alert={{true}}
+        >
+          {{t "block-membership"}}
+        </AuButton>
+      </Group>
+    </AuToolbar>
+  </:footer>
+</AuModal>
+
+<AuModal
+  @modalOpen={{this.showBlockUser}}
+  @closeModal={{toggle "showBlockUser" this}}
+>
+  <:title>
+    {{t "block-user"}}
+  </:title>
+  <:body>
+    <div class="au-o-flow au-o-flow--small">
+      <p>{{t "block-user-explanation"}}</p>
+      <p>{{t "block-user-are-you-sure" user=this.userBeingBlocked.fullName htmlSafe=true}}</p>
+    </div>
+  </:body>
+  <:footer>
+    <AuToolbar
+      as |Group|
+    >
+      <Group>
+        <AuButton
+          @skin="naked"
+          {{on "click" (toggle "showBlockUser" this)}}
+        >
+          {{t "cancel"}}
+        </AuButton>
+      </Group>
+      <Group>
+        <AuButton
+          @alert={{true}}
+        >
+          {{t "block-user"}}
+        </AuButton>
+      </Group>
+    </AuToolbar>
+  </:footer>
+</AuModal>
