--- a/app/templates/settings/users/user.hbs
+++ b/app/templates/settings/users/user.hbs
@@ -28,6 +28,22 @@
                 {{t "manage-users-general-info"}}
               </h4>
             </Group>
+            <Group>
+              {{#if @model.isBlocked}}
+                <AuButton
+                  {{on "click" (toggle "showUnblockUser" this)}}
+                >
+                  {{t "unblock-user"}}
+                </AuButton>
+              {{else}}
+                <AuButton
+                  @alert={{true}}
+                  {{on "click" (toggle "showBlockUser" this)}}
+                >
+                  {{t "block-user"}}
+                </AuButton>
+              {{/if}}
+            </Group>
           </AuToolbar>
         </Auk::Panel::Header>
         <Auk::Panel::Body>
@@ -61,11 +77,30 @@
             </:header>
             <:body>
               {{#each this.model.memberships as |membership|}}
-                <tr class="au-u-muted">
+                <tr class="{{if membership.isBlocked "au-u-muted"}}">
                   <td>{{membership.organization.name}}</td>
                   <td>{{membership.organization.identifier}}</td>
                   <td>{{membership.role.label}}</td>
-                  <td class="au-u-text-right">{{!-- actions --}}</td>
+                  <td class="au-u-text-right">
+                    {{#if membership.isBlocked}}
+                      <AuButton
+                        @skin="naked"
+                        @icon="circle-full"
+                        {{on "click" (queue (toggle "showUnblockMembership" this) (set this "membershipBeingBlocked" membership))}}
+                      >
+                        {{t "unblock-membership"}}
+                      </AuButton>
+                    {{else}}
+                      <AuButton
+                        @skin="naked"
+                        @icon="circle-x"
+                        @alert={{true}}
+                        {{on "click" (queue (toggle "showBlockMembership" this) (set this "membershipBeingBlocked" membership))}}
+                      >
+                        {{t "block-membership"}}
+                      </AuButton>
+                    {{/if}}
+                  </td>
                 </tr>
               {{/each}}
             </:body>
@@ -75,3 +110,151 @@
     </div>
   </div>
 </div>
+
+<AuModal
+  @modalOpen={{this.showBlockMembership}}
+  @closeModal={{toggle "showBlockMembership" this}}
+>
+  <:title>
+    {{t "block-membership"}}
+  </:title>
+  <:body>
+    <div class="au-o-flow au-o-flow--small">
+      <p>{{t "block-membership-explanation"}}</p>
+      <p>{{t "block-membership-are-you-sure" user=@model.fullName htmlSafe=true}}</p>
+    </div>
+  </:body>
+  <:footer>
+    <AuToolbar
+      as |Group|
+    >
+      <Group>
+        <AuButton
+          @skin="naked"
+          {{on "click" (toggle "showBlockMembership" this)}}
+        >
+          {{t "cancel"}}
+        </AuButton>
+      </Group>
+      <Group>
+        <AuButton
+          @alert={{true}}
+          {{on "click" (queue this.blockMembership (toggle "showBlockMembership" this))}}
+        >
+          {{t "block-membership"}}
+        </AuButton>
+      </Group>
+    </AuToolbar>
+  </:footer>
+</AuModal>
+
+<AuModal
+  @modalOpen={{this.showUnblockMembership}}
+  @closeModal={{toggle "showUnblockMembership" this}}
+>
+  <:title>
+    {{t "unblock-membership"}}
+  </:title>
+  <:body>
+    <div class="au-o-flow au-o-flow--small">
+      <p>{{t "unblock-membership-explanation"}}</p>
+      <p>{{t "unblock-membership-are-you-sure" user=@model.fullName htmlSafe=true}}</p>
+    </div>
+  </:body>
+  <:footer>
+    <AuToolbar
+      as |Group|
+    >
+      <Group>
+        <AuButton
+          @skin="naked"
+          {{on "click" (toggle "showUnblockMembership" this)}}
+        >
+          {{t "cancel"}}
+        </AuButton>
+      </Group>
+      <Group>
+        <AuButton
+          @alert={{true}}
+          {{on "click" (queue this.unblockMembership (toggle "showUnblockMembership" this))}}
+        >
+          {{t "unblock-membership"}}
+        </AuButton>
+      </Group>
+    </AuToolbar>
+  </:footer>
+</AuModal>
+
+<AuModal
+  @modalOpen={{this.showBlockUser}}
+  @closeModal={{toggle "showBlockUser" this}}
+>
+  <:title>
+    {{t "block-user"}}
+  </:title>
+  <:body>
+    <div class="au-o-flow au-o-flow--small">
+      <p>{{t "block-user-explanation"}}</p>
+      <p>{{t "block-user-are-you-sure" user=@model.fullName htmlSafe=true}}</p>
+    </div>
+  </:body>
+  <:footer>
+    <AuToolbar
+      as |Group|
+    >
+      <Group>
+        <AuButton
+          @skin="naked"
+          {{on "click" (toggle "showBlockUser" this)}}
+        >
+          {{t "cancel"}}
+        </AuButton>
+      </Group>
+      <Group>
+        <AuButton
+          @alert={{true}}
+          {{on "click" (queue this.blockUser (toggle "showBlockUser" this))}}
+        >
+          {{t "block-user"}}
+        </AuButton>
+      </Group>
+    </AuToolbar>
+  </:footer>
+</AuModal>
+
+<AuModal
+  @modalOpen={{this.showUnblockUser}}
+  @closeModal={{toggle "showUnblockUser" this}}
+>
+  <:title>
+    {{t "unblock-user"}}
+  </:title>
+  <:body>
+    <div class="au-o-flow au-o-flow--small">
+      <p>{{t "unblock-user-explanation"}}</p>
+      <p>{{t "unblock-user-are-you-sure" user=@model.fullName htmlSafe=true}}</p>
+    </div>
+  </:body>
+  <:footer>
+    <AuToolbar
+      as |Group|
+    >
+      <Group>
+        <AuButton
+          @skin="naked"
+          {{on "click" (toggle "showUnblockUser" this)}}
+        >
+          {{t "cancel"}}
+        </AuButton>
+      </Group>
+      <Group>
+        <AuButton
+          @alert={{true}}
+          {{on "click" (queue this.unblockUser (toggle "showUnblockUser" this))}}
+        >
+          {{t "unblock-user"}}
+        </AuButton>
+      </Group>
+    </AuToolbar>
+  </:footer>
+</AuModal>
