chore: make OVO-code column sortable

--- a/app/templates/settings/organizations/index.hbs
+++ b/app/templates/settings/organizations/index.hbs
@@ -19,7 +19,11 @@
               @field="name"
               @label={{t "organization"}}
             />
-            <th>{{t "ovo-code"}}</th>
+            <ThSortable
+              @currentSorting={{this.sort}}
+              @field="identifier"
+              @label={{t "ovo-code"}}
+            />
             <th>{{t "users-seen"}}</th>
             <th></th>
           </c.header>
