chore: show Organisatie geblokkeerd in user overview for blocked orgs

--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -64,7 +64,11 @@
                       {{membership.organization.name}}
                     </p>
                   </div>
-                  {{#if membership.isBlocked}}
+                  {{#if membership.organization.isBlocked}}
+                    <AuPill @icon="circle-x" @skin="error" @size="small">
+                      {{t "blocked-organization"}}
+                    </AuPill>
+                  {{else if membership.isBlocked}}
                     <AuPill @icon="circle-x" @skin="error" @size="small">
                       {{t "blocked-membership"}}
                     </AuPill>
